main.css
/*
Flat UI Colors
#ecf0f1;
#aaa;
#130f0e;
#2ecc71;
#f1c40f;
*/


/*General*/

* {
    border: 0;
    margin: 0;
    padding: 0;
}

::selection {
    background-color: #999;
}

#bg {
    position: fixed;
    height: 100%;
    width: 100%;
    background: url(escheresque_ste_@2X.png);
}

#content {
    position: absolute;
    z-index: 1;
}

body {
    height: 100%;
    color: #ecf0f1;
    font-family: 'Lato', sans-serif;
    text-align: center;
    background: #313131;
}

.title,
.text {
    width: 80%;
    margin: 48px auto;
    padding: 48px;
}

.text {
    background-color: rgba(19, 15, 14, 0.6);
    border-radius: 10px;
}

.text,
.ico-mail2,
.ico-gh,
.ico-user,
button {
    transition-duration: 0.8s;
}

.highlight {
    background-color: rgba(19, 15, 14, 1);
}

.title {
    color: #3498db;
    padding: 0px !important;
}

h1 {
    font-size: 140px;
    font-weight: 100;
}

h2 {
    font-size: 24px;
}

p,
button {
    font-size: 18px;
    color: #aaa;
}

h2,
p,
button {
    text-align: left;
    padding: 24px 48px;
}

.social {
    padding: 64px;
    display: inline;
}

.ico-mail2:hover {
    color: #9b59b6;
}

.ico-gh:hover {
    color: #4183c4;
}

.ico-user:hover {
    color: #2ecc71;
}

.ico-lightbulb {
    font-size: inherit;
}

a {
    color: inherit;
}

.ex {
    display: none;
    padding-left: 120px;
    padding-right: 120px;
    text-align: center;
}

button {
    background-color: rgba(19, 15, 14, 0);
    font-size: 24px;
}

button:hover {
    color: #3498db;
}

